syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.wanted.common.grpc";

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
  User user = 2;
}

message User {
  string userId = 1;
  string username = 2;
}